fixed wrong padding values on sections

--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -34,6 +34,10 @@ nav, .app-content, footer {
   flex-shrink: 0;
 }
 
+.section {
+  padding: 3rem 0;
+}
+
 a {
   color: $dark;
 
